--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^7.21.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.0",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5"
